--- a/ADFCommon/07.ADF.Web/Pages/Index.cshtml
+++ b/ADFCommon/07.ADF.Web/Pages/Index.cshtml
@@ -1,7 +1,7 @@
-@page
-@model IndexModel
+﻿@page
+@model ADF.Web.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"]="Home Page";
 }
 
 <div class="text-center">
